página pra adicionar jogo

--- a/css/_variaveis.scss
+++ b/css/_variaveis.scss
@@ -6,3 +6,5 @@ $cor-tetxo-botao-azul: #67c1f5 ;
 $cor-blocos: #16202D;
 $cor-texto1: #fff;
 $cor-texto2: #A4B0BD;
+$cor-texto3: #2DA2F5;
+$cor-texto-descricao: #C6D4D4;
