--- a/css/jogo.css
+++ b/css/jogo.css
@@ -60,7 +60,7 @@
   color: #fff;
 }
 .main .main1 .menu .ul-menu .li-menu:hover {
-  background: linear-gradient(90deg, #3178B3 0%, #1A387C 100%);
+  background: linear-gradient(90deg, #3178B3 0%, #1A387C 70%);
 }
 .main .main1 .menu .ul-menu .buscar::-moz-placeholder {
   color: #171D25;
@@ -112,8 +112,9 @@
   width: 35rem;
   margin-bottom: 1.5rem;
 }
-.main .main1 .trailer-e-descricao .descricao span {
+.main .main1 .trailer-e-descricao .descricao p {
   color: #C6D4D4;
+  margin-right: 1rem;
 }
 .main .main1 .trailer-e-descricao .descricao ul {
   margin-top: 2rem;
@@ -129,7 +130,7 @@
 }
 .main .main2 {
   grid-area: main2;
-  height: 100rem;
+  height: 115rem;
   width: 67rem;
   display: flex;
   flex-direction: column;
@@ -186,6 +187,10 @@
   color: #A4B0BD;
   margin-bottom: 2rem;
 }
+.main .main2 .sobre-o-jogo img {
+  width: 100%;
+  margin-bottom: 2rem;
+}
 .main .main3 {
   grid-area: main3;
   width: 30rem;
@@ -193,7 +198,7 @@
   display: flex;
   flex-direction: column;
 }
-.main .main3 .quantidade-jogador {
+.main .main3 .quantidade-jogador-fnaf {
   height: 10rem;
   display: flex;
   justify-content: center;
@@ -202,7 +207,7 @@
   color: #fff;
   margin-bottom: 3rem;
 }
-.main .main3 .quantidade-jogador a {
+.main .main3 .quantidade-jogador-fnaf a {
   width: 25rem;
   padding: 1rem;
   padding-left: 2rem;
@@ -212,13 +217,77 @@
   align-items: center;
   background-color: #213748;
   border-radius: 0.3rem;
+  color: #2DA2F5;
+}
+.main .main3 .quantidade-jogador-fnaf a i {
+  margin-right: 2rem;
   color: #fff;
 }
-.main .main3 .quantidade-jogador a i {
-  margin-right: 2rem;
-}
-.main .main3 .quantidade-jogador a:hover {
+.main .main3 .quantidade-jogador-fnaf a:hover {
   background-color: #59A8D5;
+  color: #fff;
+}
+.main .main3 .quantidade-jogador-st6 {
+  height: 22rem;
+  display: flex;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #16202D;
+  color: #fff;
+  margin-bottom: 3rem;
+}
+.main .main3 .quantidade-jogador-st6 a {
+  width: 28rem;
+  padding: 1rem;
+  padding-left: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #213748;
+  border-radius: 0.3rem;
+  color: #2DA2F5;
+}
+.main .main3 .quantidade-jogador-st6 a i {
+  margin-right: 2rem;
+  color: #fff;
+}
+.main .main3 .quantidade-jogador-st6 a:hover {
+  background-color: #59A8D5;
+  color: #fff;
+}
+.main .main3 .quantidade-jogador-bg3 {
+  height: 17rem;
+  display: flex;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #16202D;
+  color: #fff;
+  margin-bottom: 3rem;
+}
+.main .main3 .quantidade-jogador-bg3 a {
+  width: 28rem;
+  padding: 1rem;
+  padding-left: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #213748;
+  border-radius: 0.3rem;
+  color: #2DA2F5;
+}
+.main .main3 .quantidade-jogador-bg3 a i {
+  margin-right: 2rem;
+  color: #fff;
+}
+.main .main3 .quantidade-jogador-bg3 a:hover {
+  background-color: #59A8D5;
+  color: #fff;
 }
 .main .main3 .classificacao {
   background-color: #16202D;
