--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -6,6 +6,9 @@
 .main h2, .main a, .main span, .main h3, .main button {
   text-shadow: 2px 2px 2px rgba(50, 50, 50, 0.6);
 }
+.main button {
+  font-size: 1.6rem;
+}
 .main .main1 {
   grid-area: main1;
   width: 100rem;
@@ -185,14 +188,12 @@
   margin-right: 1rem;
 }
 .main .main2 .main2-3 button {
-  width: 25rem;
+  width: 20rem;
   height: 4rem;
   background-color: #2B475E;
   border-radius: 0.3rem;
   color: #67c1f5;
-  box-shadow: -2px 1px 16px 0px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: -2px 1px 16px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: -2px 1px 16px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.75);
   transition: 0.5s;
 }
 .main .main2 .main2-3 .continuar-e-remover {
