--- a/css/carrinho.scss
+++ b/css/carrinho.scss
@@ -18,6 +18,10 @@
         text-shadow: 2px 2px 2px rgba(50, 50, 50, 0.6);
     }
 
+    button{
+        font-size: 1.6rem;
+    }
+
     .main1{
         grid-area: main1;
         width: 100rem;
@@ -224,14 +228,12 @@
             }
 
             button{
-                width: 25rem;
+                width: 20rem;
                 height: 4rem;
                 background-color: $cor-botoes-azul;
                 border-radius: 0.3rem;
                 color: $cor-tetxo-botao-azul;
-                box-shadow: -2px 1px 16px 0px rgba(0,0,0,0.75);
-                -webkit-box-shadow: -2px 1px 16px 0px rgba(0,0,0,0.75);
-                -moz-box-shadow: -2px 1px 16px 0px rgba(0,0,0,0.75);
+                box-shadow: 1px 2px 10px 0px rgba(0,0,0,0.75);
                 transition: 0.5s;
             }
 
