--- a/css/jogo.css
+++ b/css/jogo.css
@@ -6,6 +6,9 @@
 .main h2, .main a, .main span, .main h3, .main button {
   text-shadow: 2px 2px 2px rgba(50, 50, 50, 0.6);
 }
+.main button {
+  font-size: 1.6rem;
+}
 .main .main1 {
   grid-area: main1;
   width: 100rem;
@@ -148,10 +151,12 @@
   align-items: center;
 }
 .main .main2 .preco-e-botao {
-  width: 28rem;
+  width: 26rem;
   height: 4rem;
+  padding-left: 2rem;
+  padding-right: 0.5rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   background-color: black;
   border-radius: 0.3rem;
