--- a/css/jogo.scss
+++ b/css/jogo.scss
@@ -16,6 +16,10 @@
         text-shadow: 2px 2px 2px rgba(50, 50, 50, 0.6);
     }
 
+    button{
+        font-size: 1.6rem;
+    }
+
     .main1{
         grid-area: main1;
         width: 100rem;
@@ -182,10 +186,12 @@
         }
 
         .preco-e-botao{
-            width: 28rem;
+            width: 26rem;
             height: 4rem;
+            padding-left: 2rem;
+            padding-right: 0.5rem;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             background-color: black;
             border-radius: 0.3rem;
