--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -238,7 +238,7 @@
 .main .main3 {
   grid-area: main3;
   width: 30rem;
-  height: 100rem;
+  height: 140rem;
   display: flex;
   flex-direction: column;
 }
@@ -248,4 +248,7 @@
   box-shadow: -2px 1px 16px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: -2px 1px 16px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -2px 1px 16px 0px rgba(0, 0, 0, 0.75);
+}
+.main .main3 .jogo:hover {
+  width: 31rem;
 }/*# sourceMappingURL=carrinho.css.map */
