--- a/css/jogo.css
+++ b/css/jogo.css
@@ -96,6 +96,23 @@
   margin-top: 1rem;
   margin-bottom: 2rem;
 }
+.main .main1 .nome-jogo-e-central {
+  display: flex;
+  justify-content: space-between;
+}
+.main .main1 .nome-jogo-e-central button {
+  width: 20rem;
+  height: 4rem;
+  background-color: #2B475E;
+  border-radius: 0.3rem;
+  color: #67c1f5;
+  box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.75);
+  transition: 0.5s;
+}
+.main .main1 .nome-jogo-e-central button:hover {
+  background-color: #437EA0;
+  color: #fff;
+}
 .main .main1 .trailer-e-descricao {
   height: 45rem;
   display: flex;
