--- a/css/jogo.scss
+++ b/css/jogo.scss
@@ -106,6 +106,7 @@
 
         }
 
+
         .todos-os-produtos, span {
             color: $cor-texto2;
         }
@@ -118,6 +119,26 @@
             color: #fff;
             margin-top: 1rem;
             margin-bottom: 2rem;
+        }
+
+        .nome-jogo-e-central{
+            display: flex;
+            justify-content: space-between;
+            
+            button{
+                width: 20rem;
+                height: 4rem;
+                background-color: $cor-botoes-azul;
+                border-radius: 0.3rem;
+                color: $cor-tetxo-botao-azul;
+                box-shadow: 1px 2px 10px 0px rgba(0,0,0,0.75);
+                transition: 0.5s;
+            }
+
+            button:hover{
+                background-color: $cor-botoes-azul-hover;
+                color: $cor-texto1
+            }
         }
 
         .trailer-e-descricao{
