--- a/css/style-main.css
+++ b/css/style-main.css
@@ -329,11 +329,34 @@ recomenda{
 }
 
 recomenda .ofertas {
-    border: .1rem solid black;
-    height: 35rem;
+    height: 36rem;
     margin-left: 8rem;
+    margin-top: 3rem;
+    margin-bottom: 8rem;
     display: flex;
     flex-direction: column;
+}
+recomenda .ofertas .ofertas-top{
+    display:flex;
+    justify-content: space-between;
+    color: #fff;
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+}
+recomenda .ofertas .ofertas-top span{
+    align-self: end;
+}
+recomenda .ofertas .ofertas-top button {
+    display: flex;
+    color: #fff;
+    width: 12rem;
+    height: 2rem;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border: .1rem solid #fff;
+    border-radius: .3rem;
+    font-size: 1rem;
 }
 recomenda .ofertas .oferta {
     display: grid;
@@ -349,7 +372,7 @@ recomenda .ofertas .oferta .ofer1{
     grid-area: ofer1;
     border: .1rem solid black;
     height: 32.5rem;
-    width:22rem;
+    width:22.2rem;
 }
 recomenda .ofertas .oferta .ofer1 .img{
     height: 20rem;
@@ -360,6 +383,37 @@ recomenda .ofertas .oferta .ofer1 .img{
 recomenda .ofertas .oferta .ofer1:nth-child(1){
     grid-area: ofer1-2;
 }
+recomenda .ofertas .oferta .ofer1 .price{
+    height: 12.2rem;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background: url(../img//main/background.jpg);
+    background-size: cover;
+}
+recomenda .ofertas .oferta .ofer1 .price h4{
+    margin-left: 1.5rem;
+    font-size: 1.2rem;
+    color: #fff;
+}
+recomenda .ofertas .oferta .ofer1 .price span:nth-child(2){
+    margin-left: 1.5rem;
+    font-size: 1.2rem;
+}
+recomenda .ofertas .oferta .ofer1 .price .preco{
+    width:11rem;
+    height: 3rem;
+    font-size: 2.2rem;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #B7EC11;
+    background: #4C6B22;
+    margin-left: 1.5rem;
+}
+
 recomenda .ofertas .oferta .ofer1:nth-child(1) .img{
     background: url(../img/main/oferta2.jpg);
     background-size: cover;
@@ -368,20 +422,46 @@ recomenda .ofertas .oferta .ofer2{
     grid-area: ofer2;
     border: .1rem solid black;
     height: 16rem;
-    width:25.2rem;
+    width:29.7rem;
 }
 recomenda .ofertas .oferta .ofer2 .img{
-    height: 12rem;
-    width: 25rem;
+    height: 11.7rem;
+    width: 29.5rem;
     background: url(../img/main/fnaf\ promo.jpg);
-    background-size: cover;
+    background-size: 30rem;
+    background-position-y: -.5rem;
+}
+recomenda .ofertas .oferta .ofer2 .price{
+    background: #abdaf4;
+    height: 4rem;
+    display: flex;
+    align-items:center;
+    justify-content: space-around;
+}
+recomenda .ofertas .oferta .ofer2 .price h4{
+    font-size: 1.2rem;
+    font-weight:100;
+    color: #000;
+}
+recomenda .ofertas .oferta .ofer2 .price .preco{
+    width:11rem;
+    height: 3rem;
+    font-size: 2.2rem;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #B7EC11;
+    background: #4C6B22;
+    margin-left: 1.5rem;
 }
 recomenda .ofertas .oferta .ofer2:nth-child(4){
     grid-area:ofer2-2;
 }
 recomenda .ofertas .oferta .ofer2:nth-child(4) .img{
     background: url(../img/main/sf6\ promo.jpg);
-    background-size: cover;
+    background-size: 30rem;
+    background-position-y: -2rem;
 }
 recomenda .categoria{
     border: .1rem solid black;
@@ -398,7 +478,21 @@ recomenda .categoria .cat{
 recomenda .categoria .cat .box-cat{
     border: .1rem solid black;
     height:15rem;
-    width:15rem
+    width:15rem;
+    background: url(../img/main/cidade.png);
+    background-size: cover;
+}
+recomenda .categoria .cat .box-cat:nth-child(2){
+    background: url(../img/main/drama.png);
+    background-size: cover;
+}
+recomenda .categoria .cat .box-cat:nth-child(3){
+    background: url(../img/main/estrategia.png);
+    background-size: cover;
+}
+recomenda .categoria .cat .box-cat:nth-child(4){
+    background: url(../img/main/simulacao.png);
+    background-size: cover;
 }
 
 recomenda .navegar {
