--- a/css/style-main.css
+++ b/css/style-main.css
@@ -463,35 +463,67 @@ recomenda .ofertas .oferta .ofer2:nth-child(4) .img{
     background-size: 30rem;
     background-position-y: -2rem;
 }
-recomenda .categoria{
-    border: .1rem solid black;
-    height: 20rem;
-    margin-left: 8rem;
-}
 
+recomenda .categoria{
+    height: 21rem;
+    margin-left: 8rem;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+}
+recomenda .categoria .cat-top{
+    margin-bottom: 1rem;
+    font-size: 1.3rem;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+}
+recomenda .categoria .cat-top span{
+    margin-top:.5rem;
+}
+recomenda .categoria .cat-top button{
+    display: flex;
+    color: #fff;
+    width: 12rem;
+    height: 2rem;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border: .1rem solid #fff;
+    border-radius: .3rem;
+    font-size: 1rem;
+}
 recomenda .categoria .cat{
     display:flex;
-    border: .1rem solid black;
-    height: 15rem;
+    height: 17.9rem;
+    justify-content: space-between;
 }
 
 recomenda .categoria .cat .box-cat{
-    border: .1rem solid black;
-    height:15rem;
-    width:15rem;
-    background: url(../img/main/cidade.png);
+    height:17.7rem;
+    width:18rem;
+    background: linear-gradient(0deg, #7B0608, rgba(197,0,0,0)),url(../img/main/cidade.png);
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+recomenda .categoria .cat .box-cat span{
+    color: #fff;
+    font-weight:800;
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
 }
 recomenda .categoria .cat .box-cat:nth-child(2){
-    background: url(../img/main/drama.png);
+    background: linear-gradient(0deg, rgba(233,140,0,1), rgba(197,0,0,0)), url(../img/main/drama.png);
     background-size: cover;
 }
 recomenda .categoria .cat .box-cat:nth-child(3){
-    background: url(../img/main/estrategia.png);
+    background: linear-gradient(0deg, #025F05, rgba(197,0,0,0)),url(../img/main/estrategia.png);
     background-size: cover;
 }
 recomenda .categoria .cat .box-cat:nth-child(4){
-    background: url(../img/main/simulacao.png);
+    background: linear-gradient(0deg, rgba(0,0,139), rgba(197,0,0,0)),url(../img/main/simulacao.png);
     background-size: cover;
 }
 
