--- a/css/style-main.css
+++ b/css/style-main.css
@@ -100,7 +100,7 @@ main {
     "aside recomenda"
     "aside main-cont";  
     grid-template-columns: 30rem 83rem;
-    grid-template-rows: 8.5rem 43rem 1fr 10rem;
+    grid-template-rows: 8.5rem 46rem 1fr 2fr;
 }
 
 nav{
@@ -528,24 +528,254 @@ recomenda .categoria .cat .box-cat:nth-child(4){
 }
 
 recomenda .navegar {
-    border: .1rem solid black;
     margin-left:8rem;
+    margin-top: 4rem;
     height: 8rem;
+    color: #fff;
+    font-weight:bold;
+    font-size: 1.3rem;
 }
 
 recomenda .navegar .nav-container{
-    border: .1rem solid black;
     display: flex;
-    height: 15rem;
+    height: 5.5rem;
+    margin-top: .5rem;
+    justify-content: space-between;
 }
 recomenda .navegar .nav-container .nav-box{
-    border: .1rem solid black;
     height: 5rem;
-    width: 17rem;
+    width: 18.2rem;
+    border-radius: .5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 840;
+    background: linear-gradient(90deg, rgba(6,191,255,1), rgba(43,120,255,1))
 }
+
+recomenda .games {
+    display: flex;
+    height: 2rem;
+    margin-top:5rem;
+}
+
+recomenda .games .game{
+    width: 13rem;
+    font-size: 1.22rem;
+    color: #4f94bc;
+}
+recomenda .games .game:nth-child(1){
+    color: #fff;
+    background: #203546;
+    border-radius: .1rem;
+    padding: .3rem;
+}
+recomenda .games .game:nth-child(2){
+    margin-left: 1rem;
+}
+recomenda .games .game:nth-child(3){
+    margin-left: -2.7rem;
+}
+recomenda .games .game:nth-child(4){
+    margin-left: -1.7rem;
+}
+
 
 main-cont{
     grid-area: main-cont;
+}
+main-cont .gamez{
+    display: flex;
+    margin-bottom: 5rem;
+
+}
+
+main-cont .gamez .game-cont{
+    width:45rem;
+    margin-right: 2.5rem;
+    display: flex;
+    flex-direction: column;
+}
+main-cont .gamez .game-cont .game-top{
+    display: flex;
+    justify-content: end;
+    gap: 1rem;
+    padding-top: 1rem;
+    background: #203546;
+    align-items: center;
+    
+}
+main-cont .gamez .game-cont .game-top button{
+    margin-right: 1rem;
+    display: flex;
+    color: #fff;
+    width: 8rem;
+    height: 2rem;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border: .1rem solid #fff;
+    border-radius: .3rem;
+    font-size: 1rem;
+}
+main-cont .gamez .game-cont .gamez-box{
+    background: #203546;
+    height: 6rem;
+    display:flex;
+    align-items: center;
+    margin-bottom: .5rem;
+}
+main-cont .gamez .game-cont .gamez-box .box-left{
+    height: 6rem;
+    width: 15rem;
+    background: url(../img/novidades/cat.jpg);
+    background-size: cover;
+}
+main-cont .gamez .game-cont .gamez-box:nth-child(3) .box-left{
+    background: url(../img/novidades/battle.jpg);
+    background-size: cover;
+}
+main-cont .gamez .game-cont .gamez-box:nth-child(4) .box-left{
+    background: url(../img/novidades/last.jpg);
+    background-size: cover;
+}
+main-cont .gamez .game-cont .gamez-box:nth-child(5) .box-left{
+    background: url(../img/novidades/rat.jpg);
+    background-size: cover;
+}
+main-cont .gamez .game-cont .gamez-box:nth-child(6) .box-left{
+    background: url(../img/novidades/coral.jpg);
+    background-size: cover;
+}
+main-cont .gamez .game-cont .gamez-box:nth-child(7) .box-left{
+    background: url(../img/novidades/pirate.jpg);
+    background-size: cover;
+}
+main-cont .gamez .game-cont .gamez-box:nth-child(8) .box-left{
+    background: url(../img/novidades/disco.jpg);
+    background-size: cover;
+}
+main-cont .gamez .game-cont .gamez-box:nth-child(9) .box-left{
+    background: url(../img/novidades/gatekeeper.jpg);
+    background-size: cover;
+}
+main-cont .gamez .game-cont .gamez-box:nth-child(10) .box-left{
+    background: url(../img/novidades/gunner.jpg);
+    background-size: cover;
+}
+main-cont .gamez .game-cont .gamez-box:nth-child(11) .box-left{
+    background: url(../img/novidades/cod.jpg);
+    background-size: 16rem;
+    background-repeat: no-repeat;
+    background-position-x: -1rem;
+}
+main-cont .gamez .game-cont .gamez-box .box-main{
+    width: 19rem;
+    height: 5.7rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: .3rem;
+    gap: 2rem;
+    overflow: hidden;
+}
+main-cont .gamez .game-cont .gamez-box .box-main h5{
+    font-size: 1.3rem;
+}
+main-cont .gamez .game-cont .gamez-box .box-main h6{
+    font-size: .8rem;
+}
+main-cont .gamez .game-cont .gamez-box .box-right{
+    width: 11rem;
+    height: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+main-cont .gamez .game-cont .gamez-box:nth-child(1) .box-right{
+    align-items: center;
+    justify-content: flex-start;
+}
+main-cont .gamez .game-cont .gamez-box:nth-child(10) .box-right{
+    align-items: center;
+    justify-content: flex-start;
+}
+main-cont .gamez .game-cont .gamez-box:nth-child(11){
+    background: linear-gradient(90deg, #A8CDE2,#859BAC 34%);
+    color: #1B2838;
+    width: 50rem;
+}
+main-cont .gamez .info-gamez{
+    background: #859BAC;
+    display: flex;
+    flex-direction: column;
+    color: #1B2838;
+    width: 30rem;
+    padding-left: 1.5rem;
+    padding-top: 1.6rem;
+    height: 67.5rem;
+
+}
+main-cont .gamez .info-gamez .analise {
+    border-radius: .3rem;
+    display: flex;
+    flex-direction: column;
+    font-size:1.2rem;
+    color: #c6d4df;
+    background: #4D5F6F;
+    width: 22rem;
+    padding: .5rem;
+    margin-top: 1rem;
+}
+main-cont .gamez .info-gamez .analise h4 {
+    color: #A34C25;
+}
+main-cont .gamez .info-gamez .tag {
+    display: flex;
+    gap:.3rem;
+    color: #c6d4df;
+    font-size: 1.1rem;
+    width: 25rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+main-cont .gamez .info-gamez .tag .tag-box {
+    background: #4D5F6F;
+    width: 3.5rem;
+    height: 2rem;
+    border-radius: .3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+main-cont .gamez .info-gamez .tag .tag-box:nth-child(2) {
+    width: 16rem;
+}
+
+main-cont .gamez .info-gamez .gamez-bot{
+    width: 22rem;
+    height: 54rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+main-cont .gamez .info-gamez .gamez-bot .gamez-box{
+    width: 22rem;
+    height: 12rem;
+    background: url(../img/COD/screen1.jpg);
+    background-size: cover;
+}
+main-cont .gamez .info-gamez .gamez-bot .gamez-box:nth-child(2){
+    background: url(../img/COD/screen2.jpg);
+    background-size: cover;
+}
+main-cont .gamez .info-gamez .gamez-bot .gamez-box:nth-child(3){
+    background: url(../img/COD/screen3.jpg);
+    background-size: cover;
+}
+main-cont .gamez .info-gamez .gamez-bot .gamez-box:nth-child(4){
+    background: url(../img/COD/screen4.jpg);
+    background-size: cover;
 }
 
 footer {
@@ -554,8 +784,6 @@ footer {
     justify-content: center;
     align-items: center;
     color: #8F886F;
-    
-
 }
 .info {
     width: 95rem;   
