--- a/css/style-main.css
+++ b/css/style-main.css
@@ -61,6 +61,7 @@ header {
     display: flex;
     justify-content: center;
     align-items:center;
+
 }
 .abas ul li{
     color: #fff;
@@ -100,7 +101,7 @@ main {
     "aside recomenda"
     "aside main-cont";  
     grid-template-columns: 30rem 83rem;
-    grid-template-rows: 8.5rem 46rem 1fr 2fr;
+    grid-template-rows: 8.5rem 46rem 1fr 100rem;
 }
 
 nav{
@@ -112,20 +113,28 @@ nav{
 }
 nav button{
     width: 12rem;
+    height: 1.8rem;
     border-radius: .3rem;
+    background: #4C6B22;
+    color: #B7EC11;
+    font-weight: bold;
+    margin-top: 1rem;
+    margin-bottom: .5rem;
 }
 .nav {
-    border: .1rem solid black;
     width: 75rem;
     height: 3rem;
     display: flex;
     justify-content: space-around;
     font-weight: bold;
+    background: linear-gradient(90deg, rgba(59,100,144,1) 0%, rgba(15,34,110,1) 100%);
+
 }
 .nav ul {
     display: flex;
     justify-content: center;
     align-items:center;
+    
 }
 .nav ul li{
     color: #fff;
@@ -143,10 +152,24 @@ nav button{
     width: 10rem;
 }
 .nav ul li:hover{
-    height: 3rem;
-    background-color: #fff;
+    height:2.8rem;
+    background: linear-gradient(95deg, rgba(47,124,187,1) 36%, rgba(59,100,144,1) 57%);
+    display: flex;
+    padding-top: .50rem;
 }
-
+.nav .search input{
+    margin-top: .2rem;
+    background: #316282;
+    height: 2.5rem;
+    border-radius: .2rem;
+    margin-right: .2rem;
+}
+.nav .search input::placeholder{
+    color: #0e1c25;
+    padding-left: .5rem;
+    font-style: italic;
+    
+}
 
 aside{
     grid-area: aside;
@@ -775,6 +798,81 @@ main-cont .gamez .info-gamez .gamez-bot .gamez-box:nth-child(3){
 }
 main-cont .gamez .info-gamez .gamez-bot .gamez-box:nth-child(4){
     background: url(../img/COD/screen4.jpg);
+    background-size: cover;
+}
+
+main-cont .promo {
+    height: 16rem;
+    width: 75rem;
+    display: flex;
+    flex-direction: column;
+}
+
+main-cont .promo .promo-top{
+    display: flex;
+    justify-content: end;
+    padding: .5rem;
+
+}
+main-cont .promo .promo-top span{
+    margin-right: 47.5rem;
+    margin-top: .3rem;
+
+}
+main-cont .promo .promo-top button{
+    margin-left: 1rem;
+    display: flex;
+    color: #fff;
+    width: 8rem;
+    height: 2rem;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border: .1rem solid #fff;
+    border-radius: .3rem;
+    font-size: 1rem;
+}
+main-cont .promo .promo-container{
+    display: flex;
+    justify-content: space-between;
+}
+main-cont .promo .promo-container .promo-box{
+    display: flex;
+    flex-direction: column;
+    height: 12rem;
+    width: 18.5rem;
+}
+main-cont .promo .promo-container .promo-box .info{
+    background:linear-gradient( -45deg, rgba(64,121,153,1) 5%,rgba(42,62,89,1) 95%);
+    width: 18.2rem;
+}
+main-cont .promo .promo-container .promo-box .info .price{
+    background: #344654;
+    width: 6rem;
+    height: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 1rem;
+    border-radius: .1rem;
+    color:#B7EC11;
+}
+main-cont .promo .promo-container .promo-box .background {
+    height: 15rem;
+    width: 18.2rem;
+    background: url(../img/20RS/re4.jpg);
+    background-size: cover;
+}
+main-cont .promo .promo-container .promo-box:nth-child(2) .background{
+    background: url(../img/20RS/overcooked2.jpg);
+    background-size: cover;
+}
+main-cont .promo .promo-container .promo-box:nth-child(3) .background{
+    background: url(../img/20RS/prey.jpg);
+    background-size: cover;
+}
+main-cont .promo .promo-container .promo-box:nth-child(4) .background{
+    background: url(../img/20RS/vampire.jpg);
     background-size: cover;
 }
 
