--- a/css/style-main.css
+++ b/css/style-main.css
@@ -1,11 +1,3 @@
-/* @root {
-    #184454
-    #18394A
-    #1B2838
-    #2A465D
-    #171D25
-} */
-
 * {
     border:0;
     padding:0;
@@ -27,8 +19,14 @@ body {
     height: 100vh; 
     display: grid;
     grid-template-rows: 13rem 1fr 13rem;
+    grid-template-columns: 100vw;
+    grid-template-areas: 
+    'header'
+    'main'
+    'footer';
 }
 header {
+    grid-area: header;
     width: 100vw;
     height: 13rem;
     display: flex;
@@ -36,6 +34,7 @@ header {
     background: #171D25;
     color: #fff;
     gap: 4rem;
+    justify-content: center;
 }
 .menu {
     width: 85rem;
@@ -93,6 +92,7 @@ header {
 }
 
 main {
+    grid-area: main;
     background: linear-gradient(90deg, rgba(26,41,58,1) 0%, rgba(32,62,90,1) 19%);
     display: grid;
     grid-template-areas: 
@@ -102,6 +102,7 @@ main {
     "aside main-cont";  
     grid-template-columns: 30rem 83rem;
     grid-template-rows: 8.5rem 46rem 1fr 100rem;
+    justify-content: center;
 }
 
 nav{
@@ -877,6 +878,7 @@ main-cont .promo .promo-container .promo-box:nth-child(4) .background{
 }
 
 footer {
+    grid-area: footer;
     background: #171A21;
     display: flex;
     justify-content: center;
