--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -102,39 +102,6 @@
   flex-direction: column;
   margin-right: 3rem;
 }
-.main .main2 .main2-1-fnaf {
-  width: 100%;
-  height: 8rem;
-  background-color: #16202D;
-  margin-bottom: 0.5rem;
-  display: flex;
-  justify-content: space-between;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.main .main2 .main2-1-fnaf .jogo {
-  display: flex;
-  align-items: center;
-}
-.main .main2 .main2-1-fnaf .jogo img {
-  width: 15rem;
-  height: 5rem;
-}
-.main .main2 .main2-1-fnaf .jogo a {
-  color: #fff;
-  margin-left: 2rem;
-}
-.main .main2 .main2-1-fnaf .preco {
-  width: 17rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  color: #fff;
-}
-.main .main2 .main2-1-fnaf .preco a {
-  color: #A4B0BD;
-  text-decoration: underline;
-}
 .main .main2 .main2-1-fnaf, .main .main2 .main2-1-st6, .main .main2 .main2-1-bg3 {
   width: 100%;
   height: 8rem;
@@ -284,4 +251,123 @@
 }
 .main .main3 .jogo:hover {
   width: 31rem;
+}
+
+@media (max-width: 450px) {
+  header {
+    width: 100rem;
+  }
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .main .main1 {
+    width: 100%;
+    margin-top: 0rem;
+    margin-bottom: 3rem;
+  }
+  .main .main1 .menu {
+    height: 60rem;
+    flex-direction: column;
+    justify-content: flex-start;
+    font-size: 3rem;
+  }
+  .main .main1 .menu .carrinho {
+    display: none;
+  }
+  .main .main1 .menu .ul-menu {
+    border: 3px solid blue;
+    width: 100%;
+    height: 60rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .main .main1 .menu .ul-menu .li-menu {
+    width: 100%;
+    padding: 2rem;
+    display: flex;
+    border: 1px solid black;
+  }
+  .main .main1 .menu .ul-menu .buscar {
+    background-color: #5E839A;
+    margin-top: 2rem;
+    width: 95%;
+    margin-left: 0;
+    height: 100rem;
+    font-size: 3rem;
+  }
+  .main .main1 .menu .ul-menu i {
+    position: relative;
+    bottom: 5rem;
+    left: 42rem;
+    margin-right: 2rem;
+  }
+  .main .main1 h2 {
+    font-size: 5rem;
+  }
+  .main .main1 a, .main .main1 span {
+    font-size: 3rem;
+  }
+  .main .main1 h2, .main .main1 .todos-os-produtos {
+    margin-left: 2rem;
+  }
+  .main .main2 {
+    width: 100%;
+    margin-right: 0;
+  }
+  .main .main2 h2 {
+    font-size: 5rem;
+  }
+  .main .main2 a, .main .main2 span, .main .main2 i, .main .main2 h3, .main .main2 button {
+    font-size: 3rem;
+  }
+  .main .main2 .main2-1-fnaf, .main .main2 .main2-1-st6, .main .main2 .main2-1-bg3 {
+    height: 15rem;
+  }
+  .main .main2 .main2-1-fnaf .jogo img, .main .main2 .main2-1-st6 .jogo img, .main .main2 .main2-1-bg3 .jogo img {
+    width: 30rem;
+    height: 12rem;
+  }
+  .main .main2 .main2-1-fnaf .preco, .main .main2 .main2-1-st6 .preco, .main .main2 .main2-1-bg3 .preco {
+    width: 20rem;
+    flex-direction: column;
+  }
+  .main .main2 .main2-1-fnaf .preco i, .main .main2 .main2-1-st6 .preco i, .main .main2 .main2-1-bg3 .preco i {
+    display: none;
+  }
+  .main .main2 .main2-2 {
+    height: 40rem;
+  }
+  .main .main2 .main2-2 .botoes-compra {
+    height: 20rem;
+    justify-content: space-around;
+    align-items: flex-end;
+    flex-direction: column;
+  }
+  .main .main2 .main2-2 .botoes-compra button {
+    width: 45rem;
+    height: 6rem;
+  }
+  .main .main2 .main2-3 {
+    height: 25rem;
+  }
+  .main .main2 .main2-3 button {
+    width: 45rem;
+    height: 6rem;
+  }
+  .main .main2 .main2-3 .continuar-e-remover {
+    height: 16rem;
+    padding: 2rem;
+    align-items: flex-start;
+    flex-direction: column-reverse;
+  }
+  .main .main3 {
+    height: 250rem;
+    width: 100%;
+    align-items: center;
+  }
+  .main .main3 img {
+    width: 80%;
+  }
 }/*# sourceMappingURL=carrinho.css.map */
