--- a/css/carrinho.scss
+++ b/css/carrinho.scss
@@ -316,6 +316,14 @@
 @media (max-width: 450px){
     header {
         width: 100rem;
+        .logo{
+            position: relative;
+            right: 10rem;
+        }
+
+        .abas, button, span {
+            display: none;
+        }
     }
     .main{
         display: flex;
@@ -339,7 +347,6 @@
                 }
 
                 .ul-menu{
-                    border: 3px solid blue;
                     width: 100%;
                     height: 60rem;
                     display: flex;
@@ -349,7 +356,6 @@
                         width: 100%;
                         padding: 2rem;
                         display: flex;
-                        border: 1px solid black;
                     }
 
                     .buscar{
@@ -419,7 +425,8 @@
             }
 
             .main2-2{
-                height: 40rem;
+                height: 45rem;
+                padding-top: 5rem;
 
                 .botoes-compra{
                     height: 20rem;
@@ -435,7 +442,9 @@
             }
 
             .main2-3{
-                height: 25rem;
+                height: 35rem;
+                padding: 3rem;
+                padding-top: 5rem;
 
                 button{
                     width: 45rem;
@@ -449,16 +458,27 @@
                     flex-direction: column-reverse;
                 }
             }
+
+            .main2-4{
+                height: 30rem;
+            }
         }
 
 
 
         .main3{
-            height: 250rem;
+            margin-top: 5rem;
+            height: 300rem;
             width: 100%;
             align-items: center;
+    
+            a{
+                width: 80%;
+                img{
+                    width: 100%;
+                }
+            }
 
-        
             img{
                 width: 80%;
             }
