--- a/css/jogo.scss
+++ b/css/jogo.scss
@@ -398,3 +398,182 @@
         }
     }
 }
+
+@media (max-width: 500px) {
+    header {
+        width: 100rem;
+        .logo{
+            position: relative;
+            right: 10rem;
+        }
+
+        .abas, button, span {
+            display: none;
+        }
+    }
+
+    .main{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .main1{
+            width: 100%;
+            margin-top: 0rem;
+            margin-bottom: 3rem;
+
+
+            .menu{
+                height: 60rem;
+                flex-direction: column;
+                justify-content: flex-start;
+                font-size: 3rem;
+
+                .carrinho{
+                    display: none;
+                }
+
+                .ul-menu{
+                    width: 100%;
+                    height: 60rem;
+                    display: flex;
+                    flex-direction: column;
+
+                    .li-menu{
+                        width: 100%;
+                        padding: 2rem;
+                        display: flex;
+                    }
+
+                    .buscar{
+                        background-color: #5E839A;
+                        margin-top: 2rem;
+                        width: 95%;
+                        margin-left: 0;
+                        height: 100rem;
+                        font-size: 3rem;
+                    }
+
+                    i{
+                        position: relative;
+                        bottom: 5rem;
+                        left: 42rem;
+                        margin-right: 2rem;
+                    }
+                }
+            }
+
+            h2 {
+                font-size: 5rem;
+            }
+            
+            a, span{
+                font-size: 3rem;
+            }
+
+            h2, .todos-os-produtos {
+                margin-left: 2rem;
+            }
+
+            button{
+                display: none;
+            }
+
+            .trailer-e-descricao{
+                height: 180rem;
+                flex-direction: column-reverse;
+
+                li, p{
+                    font-size: 3rem;
+                    margin-left: 5rem;
+                    margin-right: 5rem;
+                    margin-top: 3rem;
+                }
+
+                .trailer, .descricao{
+                    width: 100%;
+                }
+
+                .descricao{
+                    img{
+                        width: 100%;
+                    }
+                }
+
+                .trailer{
+                    iframe{
+                        width: 100%;
+                        height: 60rem;
+                    }
+
+                    img{
+                        width: 19.5rem;
+                    }
+                }
+            }
+        }
+
+        .main2{
+            width: 100%;
+            padding: 5rem;
+            height: auto;
+            margin-right: 0;
+
+            h3, span, i, p, button{
+                font-size: 3rem;
+            }
+
+            .adicionar-jogo{
+                height: 20rem;
+                align-items: flex-start;
+                padding-top: 5rem;
+            }
+
+            .preco-e-botao{
+                width: 40rem;
+                height: 6rem;
+                bottom: 8rem;
+                left: 45rem;
+
+                button{
+                    width: 20rem;
+                    height: 5rem;
+                }
+            }
+
+        }
+
+        .main3{
+            width: 100%;
+            padding: 3rem;
+
+            a, h5{
+                font-size: 3rem;
+            }
+
+            .quantidade-jogador-fnaf, .quantidade-jogador-st6, .quantidade-jogador-bg3{
+                a{
+                    width: 95%;
+                }
+            }
+
+            .quantidade-jogador-bg3{
+                height: 25rem;
+            }
+
+            .quantidade-jogador-st6{
+                height: 32rem;
+            }
+
+            .classificacao{
+                img{
+                    width: 15rem;
+                }
+            }
+
+
+        }
+
+    }
+
+}
