--- a/css/style-compra.css
+++ b/css/style-compra.css
@@ -20,7 +20,7 @@ body {
     width: 100vw;
     height: 100vh; 
     grid-template-rows: 13rem 1fr;
-    grid-template-columns: 13rem 1fr;
+    grid-template-columns: 100rem 1fr;
     grid-template-areas:
     'header header'
     'main aside';
@@ -28,17 +28,171 @@ body {
 
 header {
     grid-area: header;
+    display: flex;
+    justify-content: center;
 }
 
-.head {
-    border: .1rem solid black;
+
+.head{
+    width: 132rem;
+}
+.head-container {
+    display:flex;
+    border-bottom: .1rem solid rgba(33,77,111,1);
     justify-content: center;
     align-items: center;
-    background:#233E5B;
+    background: linear-gradient(95deg, rgba(35,62,90,1) 0%, rgba(27,40,56,1) 28%, rgba(35,62,90,1) 50%, rgba(32,54,77,1) 69%, rgba(27,40,56,1) 100%);
+    box-shadow: -0.2rem 1rem 3.9rem 0rem rgba(33,77,111,0.73);
+    height: 10rem;
+    gap: 40rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
+.head-left{
+    font-weight: bold;
+}
+.head-right{
+    height: 5rem;
+    width: 15rem;
+    background: url(../img/logo.png);
+    background-repeat: no-repeat;
+}
+
 main{
     grid-area: main;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.item {
+    background: #16202D;
+    width: 70rem;
+    height: 10rem;
+    display: flex;
+    align-items: center;
+    padding-left: 2rem;
+}
+
+.img {
+    width: 17rem;
+    height: 6rem;
+    display: flex;
+    justify-content: center;
+}
+
+.img img {
+    width: 17rem;
+    height: 5.8rem;
+}
+
+.text-item {
+    width: 45rem;
+    height: 6rem;
+    display: flex;
+    align-items: center;
+    padding: 2rem;
+}
+
+.text-item span {
+    color:#7092a5;
+} 
+
+.preco {
+    height: 6rem;
+    display: flex;
+    align-items: center;
+    padding: 2rem;
+}
+
+.preco {
+    color:#7092a5;
+}
+
+.valor {
+    margin-top:.5rem;
+    background: #16202D;
+    width: 70rem;
+    height: 15rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 5rem;
+}
+
+.total-top {
+    border-bottom: .1rem solid #7092A5;
+    display: flex;
+    justify-content: space-between;
+    width: 60rem;
+    margin-bottom: .5rem;
+    padding-bottom: .5rem;
+
+}
+.total-top span {
+    color:#7092a5;
+
+}
+
+.total-bot {
+    display: flex;
+    justify-content: space-between;
+    width: 60rem;
+    margin-bottom: .5rem;
+}
+.total-bot span{
+    color:#7092a5;
+}
+.info {
+    margin-top:.5rem;
+    background: #16202D;
+    width: 70rem;
+    height: 15rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 5rem;
+}
+
+.info-top{
+    border-bottom: .1rem solid #7092a5;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-bottom: 1rem;
+    width: 60rem;
+}
+
+.info-top span{
+    color:#7092a5;
+}
+
+.info-bot {
+    display: flex;
+    justify-content: start;
+    margin-top: 1rem;
+}
+.info-bot input {
+    margin-right: 2rem;
 }
 aside{
     grid-area:aside;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+.text {
+    background: #16202D;
+    width: 30rem;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    gap: 1.5rem;
+}
+
+.qrcode {
+    background: #16202D;
+    height: 22rem;
+    width: 30rem;
+
 }
